[package]
name = "streams-pubsub"
version = "0.1.0"
authors = ["Thoralf-M"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
channels_lite = { git= "https://github.com/AleBuser/iota-channels-lite"}
failure = "0.1.7"
tokio = { version = "^0.2", features = ["full"] }
futures = "0.3.5"
# iota-lib-rs = "0.4.1"